--- a/package.json
+++ b/package.json
@@ -6,22 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.6",
+    "@prisma/client": "^5.5.1",
+    "encoding": "^0.1.13",
+    "langchain": "^0.0.92",
+    "next": "13.5.6",
     "react": "^18",
+    "react-autosave": "^0.4.3",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "recharts": "^2.6.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react-swc": "^3.4.1",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "jsdom": "^22.1.0",
+    "postcss": "^8",
+    "prisma": "^5.5.1",
+    "tailwindcss": "^3",
+    "typescript": "^5",
+    "vitest": "^0.34.6"
   }
 }
